<resources>
    <string name="app_name">TestShopApp</string>

    <string name="toast_added_to_cart">This product was added to the cart</string>

    <!-- SECTION   -->
    <string name="section_best_sellers">Best Sellers</string>
    <string name="section_see_more">see more</string>
    <string name="section_category">Select Category</string>
    <string name="section_view_all">view all</string>
    <string name="section_hot_sales">Hot Sales</string>

    <!--  CATEGORY  -->
    <string name="category_phones">Phones</string>
    <string name="category_computer">Computer</string>
    <string name="category_health">Health</string>
    <string name="category_books">Books</string>
    <string name="category_tools">Tools</string>
    
    <!--  CART  -->
    <string name="cart_my_cart">My Cart</string>
    <string name="cart_item_price">$%1$s.00</string>
    <string name="cart_common_price">$%1$s us</string>
    <string name="cart_add_address">Add address</string>
    <string name="cart_total">Total</string>
    <string name="cart_delivery">Delivery</string>
    <string name="cart_free">Free</string>
    <string name="cart_checkout">Checkout</string>

    <!--  PRODUCT  -->
    <string name="product_price">$%1$s.00</string>
    <string name="product_capacity">%1$s GB</string>
    <string name="product_product_details">Product Details</string>
    <string name="product_select_color_and_capacity">Select color and capacity</string>
    <string name="product_add_to_cart">Add to Cart</string>

    <!--  BOTTOM BAR  -->
    <string name="bottom_bar_explorer">Explorer</string>

    <!--  FILTER  -->
    <string name="filter_filter_options">Filter Options</string>
    <string name="filter_done">Done</string>
    <string name="filter_brand">Brand</string>
    <string name="filter_price">Price</string>
    <string name="filter_size">Size</string>

    <!--  HOT SALES  -->
    <string name="hot_sales_new">New</string>
    <string name="hot_sales_buy_now">Buy now!</string>

    <!--  SEARCH  -->
    <string name="search_search">Search</string>
</resources>